WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31226
V8 WorkerContextExecutionProxy does not handle SharedWorkers
https://bugs.webkit.org/show_bug.cgi?id=31226
Summary
V8 WorkerContextExecutionProxy does not handle SharedWorkers
Andrew Wilson
Reported
2009-11-07 10:06:28 PST
WorkerContextExecutionProxy does not currently handle SharedWorkers: * It always creates a DedicatedWorkerContext for the global context * It does not know how to convert an EventTarget to a SharedWorker or SharedWorkerContext
Attachments
proposed patch
(4.03 KB, patch)
2009-11-07 10:12 PST
,
Andrew Wilson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wilson
Comment 1
2009-11-07 10:12:57 PST
Created
attachment 42697
[details]
proposed patch
Andrew Wilson
Comment 2
2009-11-07 10:13:41 PST
Adding dglazkov in case he has a chance to review this.
Dimitri Glazkov (Google)
Comment 3
2009-11-08 21:43:29 PST
Comment on
attachment 42697
[details]
proposed patch r=me.
WebKit Commit Bot
Comment 4
2009-11-08 22:00:10 PST
Comment on
attachment 42697
[details]
proposed patch Clearing flags on attachment: 42697 Committed
r50638
: <
http://trac.webkit.org/changeset/50638
>
WebKit Commit Bot
Comment 5
2009-11-08 22:00:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug